# pick

./: README.md
catkin_ur/: argparse  math  moveit_commander  rospy
catkin_ur/catkin_ur/: actionlib  sys  ur5_pick_place_test.txt
catkin_ur/catkin_ur/devel/: _setup_util.py
catkin_ur/catkin_ur/devel/include/grasp/: Num.h
catkin_ur/catkin_ur/devel/include/kinova_msgs/: AddPoseToCartesianTrajectoryRequest.h  AddPoseToCartesianTrajectoryResponse.h  ArmJointAnglesActionFeedback.h  ArmJointAnglesFeedback.h  ArmJointAnglesGoal.h  ArmPoseActionFeedback.h  ArmPoseActionResult.h  ArmPoseGoal.h  Arm_KinovaPoseAction.h  Arm_KinovaPoseFeedback.h  HomeArmRequest.h  HomeArmResponse.h  SetForceControlParamsResponse.h  SetNullSpaceModeStateResponse.h  SetTorqueControlModeRequest.h
catkin_ur/catkin_ur/devel/include/moveit_simple_grasps/: GenerateGraspsAction.h
catkin_ur/catkin_ur/devel/include/ur_msgs/: IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h
catkin_ur/catkin_ur/devel/lib/pkgconfig/: bhand_description.pc  gazebo_ros_link_attacher.pc  grasp.pc  j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  kinova_arm_moveit_demo.pc  kinova_demo.pc  kinova_driver.pc  m1n6s300_moveit_config.pc  turtlebot_description.pc  ur10_moveit_config.pc  ur5_test.pc  ur5hand_moveit_config.pc  ur_bringup.pc  ur_msgs.pc
catkin_ur/catkin_ur/devel/lib/ur5_test/: moveit_example
catkin_ur/catkin_ur/devel/lib/ur5hand_moveit_config/: test_custom_node
catkin_ur/catkin_ur/src/universal_robot-kinetic-devel/moveit_simple_grasps/: CMakeLists.txt
catkin_ur/catkin_ur/src/universal_robot-kinetic-devel/my_grasp/: setup.py
catkin_ur/catkin_ur/src/universal_robot-kinetic-devel/ur5_moveit_config/: CMakeLists.txt
catkin_ur/devel/: .catkin  .rosinstall  setup.sh
catkin_ur/devel/include/: ui_image_view.h
catkin_ur/devel/include/kinova_msgs/: ArmJointAnglesAction.h  ArmJointAnglesActionGoal.h  ArmJointAnglesActionResult.h  ArmJointAnglesResult.h  ArmPoseAction.h  ArmPoseActionGoal.h  ArmPoseFeedback.h  ArmPoseResult.h  Arm_KinovaPoseActionFeedback.h  Arm_KinovaPoseActionGoal.h  Arm_KinovaPoseActionResult.h  Arm_KinovaPoseGoal.h  Arm_KinovaPoseResult.h  CartesianForce.h  ClearTrajectoriesRequest.h  ClearTrajectoriesResponse.h  FingerPosition.h  JointAngles.h  JointTorque.h  JointVelocity.h  KinovaPose.h  PoseVelocity.h  RunCOMParametersEstimationRequest.h  RunCOMParametersEstimationResponse.h  SetEndEffectorOffsetRequest.h  SetEndEffectorOffsetResponse.h  SetFingersPositionAction.h  SetFingersPositionActionFeedback.h  SetFingersPositionActionGoal.h  SetFingersPositionActionResult.h  SetFingersPositionFeedback.h  SetFingersPositionGoal.h  SetFingersPositionResult.h  SetForceControlParamsRequest.h  SetNullSpaceModeStateRequest.h  SetTorqueControlModeResponse.h  SetTorqueControlParametersRequest.h  SetTorqueControlParametersResponse.h  StartRequest.h  StartResponse.h  (+4 more)
catkin_ur/devel/include/moveit_simple_grasps/: GenerateGraspsActionFeedback.h  GenerateGraspsActionGoal.h  GenerateGraspsActionResult.h  GenerateGraspsFeedback.h  GenerateGraspsGoal.h  GenerateGraspsResult.h  GraspGeneratorOptions.h
catkin_ur/devel/include/my_grasp/: Num.h
catkin_ur/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
catkin_ur/devel/lib/kinova_arm_moveit_demo/: work_scene
catkin_ur/devel/lib/kinova_driver/: joint_trajectory_action_server  kinova_arm_driver  kinova_tf_updater
catkin_ur/devel/lib/pkgconfig/: j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  jaco_moveit.pc  kinova_bringup.pc  kinova_control.pc  kinova_description.pc  kinova_gazebo.pc  kinova_msgs.pc  m1n6s300_ikfast.pc  moveit_simple_grasps.pc  my_grasp.pc  object_msgs.pc  pcl_test.pc  qr_detector.pc  roboticsgroup_gazebo_plugins.pc  robotiq_85_description.pc  robotiq_arg2f_model_visualization.pc  rosbook_arm_hardware_gazebo.pc  rqt_image_view.pc  turtlebot_bringup.pc  turtlebot_capabilities.pc  ur3_moveit_config.pc  ur5_gripped_moveit_config.pc  ur5_moveit_config.pc  ur5_robotiq_moveit_config.pc  ur5_robotiq_parallel_bringup.pc  ur5_robotiq_parallel_description.pc  ur5_robotiq_parallel_moveit.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_test.pc  urhand_moveit_config.pc
catkin_ur/devel/lib/ur5_moveit_config/: test_random_node
catkin_ur/devel/lib/ur5_test/: add_collision_objct  collision_test  pick_test_2
catkin_ur/devel/lib/ur_test/: grayImage  zbar_opencv
catkin_ur/src/pcl_test/: CMakeLists.txt  LCCP.cpp  lccpa.cpp  package.xml
catkin_ur/src/universal_robot-kinetic-devel/grasp/: CMakeLists.txt  package.xml
catkin_ur/src/universal_robot-kinetic-devel/my_grasp/: CMakeLists.txt  pick.py
catkin_ur/src/universal_robot-kinetic-devel/rosbook_arm_hardware_gazebo/: CMakeLists.txt  package.xml
catkin_ur/src/universal_robot-kinetic-devel/ur5_moveit_config/: test_random.cpp
catkin_ur/src/universal_robot-kinetic-devel/ur5hand_moveit_config/: .setup_assistant  CMakeLists.txt
catkin_ur/src/universal_robot-kinetic-devel/ur5hand_moveit_config/config/: controllers.yaml  ur5.srdf
catkin_ur/src/universal_robot-kinetic-devel/ur5hand_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  warehouse.launch
catkin_ur/src/universal_robot-kinetic-devel/ur_test/: CMakeLists.txt  dxcimage.cpp  elevator.launch  getimage.cpp  harris.cpp  sad.cpp  sadimage.cpp  ur5_pointcl.cpp  zbar_opencv.cpp
src/ur5_robotiq_parallel-master/ur5_robotiq_parallel_bringup/worlds/: grasp3.world
(+168 files in other folders)
